--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <section>
         <!-- slack user name  -->
-        <h2 data-testid="slackUserName">James Victor</h2>
+        <h2 data-testid="slackUserName">James_Victor</h2>
 
         <!-- slack profile picture -->
         <div class="profilepic">
@@ -22,11 +22,12 @@
              <span data-testid="currentUTCTime">23:00 am</span>
         </div>
 
-        <div data-testid="myTrack">Frontend developer</div>
+       
 
         <!-- link to github repository holding the sources file -->
-        <div>
-            <a href="#">Github repository</a>
+        <div class="track">
+             <div data-testid="myTrack">Frontend developer</div>
+            <a data-testid="githubURL" href="#">Github repository</a>
         </div>
     </section>
     <script src="index.js"></script>
