added a link to my github repositry where the code is been hosted

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- link to github repository holding the sources file -->
         <div class="track">
              <div data-testid="myTrack">Frontend developer</div>
-            <a data-testid="githubURL" href="#">Github repository</a>
+            <a data-testid="githubURL" href="http://github.com/JamesVictor-O/HNGx_stage_one">Github repository</a>
         </div>
     </section>
     <script src="index.js"></script>
